@@ -2,6 +2,8 @@
 
 	* server.c:read_data() - so broken. when select timed out in the
 	  middle of a line the line would be corrupted. Don't do that.
+	* ncommand.c - fix /names * to replace * with current channel.
+	  /names also uses current channel.
 
 2006-12-17  Rex Feany  <laeos@laeos.net>
 
